log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 02:43:22 AM UTC: 
 tests:  0|6
total_score: 0/70
4c540cc
Wed 29 Mar 2023 08:23:14 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:37: error: ‘*list.capacity’ may be used uninitialized [-Werror=maybe-uninitialized]
   17 |   list->data = (void **) calloc(list->capacity, sizeof(void*));
      |                                 ~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
127a9a5
Wed 29 Mar 2023 08:23:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fa2a419
Wed 29 Mar 2023 08:32:39 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
36c47cb
Wed 29 Mar 2023 08:32:57 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c5720a7
Wed 29 Mar 2023 08:33:13 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
fe2c0dc
Wed 29 Mar 2023 09:35:26 PM UTC: 
 arraylist.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  3|4
total_score: 20/70
3fa804f
Wed 29 Mar 2023 09:36:08 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
fa1afda
Wed 29 Mar 2023 09:39:06 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
28e0edf
Wed 29 Mar 2023 09:39:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb21a3a
Wed 29 Mar 2023 10:08:55 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
c1e2f84
Wed 29 Mar 2023 10:11:53 PM UTC: 
 arraylist.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
2de0093
Wed 29 Mar 2023 10:22:33 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8fbd2e2
Wed 29 Mar 2023 10:22:56 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b976297
